Split mediawiki dump into chunks starting from multistream version